grammar.js
    program: ($) =>
      choice(
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          field("commands", $.complete_commands),
          optional(field("trailing", $.linebreak)),
          optional($._free_trailing_layout),
        ),
        seq(
          optional(field("leading", $.linebreak)),
          optional($._free_trailing_layout),
        ),
      ),

    complete_commands: ($) =>
      seq(
        field("command", $.complete_command),
        repeat(
          seq(
            field("separator", $.newline_list),
            optional($._horizontal_layout),
            field("command", $.complete_command),
          ),
        ),
      ),

    complete_command: ($) =>
      seq(
        field("body", $.list),
        optional(
          seq(
            optional($._separator_boundary_layout),
            field("terminator", $.separator_op),
          ),
        ),
      ),

    list: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            optional($._separator_boundary_layout),
            field("separator", $.separator_op),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
      ),

    and_or: ($) =>
      seq(
        field("pipeline", $.pipeline),
        repeat(
          seq(
            commandBoundaryLayout($),
            field("operator", choice($.and_if, $.or_if)),
            continuedLinebreakLayout($),
            field(
              "pipeline",
              choice($.pipeline, alias($._recovering_pipeline, $.pipeline)),
            ),
          ),
        ),
      ),

    pipeline: ($) =>
      choice(
        seq(
          optional(
            seq(field("negation", $.bang), optional($._horizontal_layout)),
          ),
          field("sequence", $.pipe_sequence),
        ),
        prec.dynamic(
          -20,
          seq(
            field("negation", $.bang),
            optional($._horizontal_layout),
            field(
              "sequence",
              alias($._recovering_pipe_sequence, $.pipe_sequence),
            ),
          ),
        ),
      ),

    pipe_sequence: ($) =>
      seq(
        field("command", $.command),
        repeat(
          seq(
            commandBoundaryLayout($),
            "|",
            continuedLinebreakLayout($),
            field(
              "command",
              choice($.command, alias($._recovering_command, $.command)),
            ),
          ),
        ),
      ),

    command: ($) =>
      choice(
        field("body", $.simple_command),
        $._redirectable_compound_command,
        field("body", $.function_definition),
        prec.dynamic(-1000, invalidCommandRecoveryField($)),
      ),

    _redirectable_compound_command: ($) => redirectableCompoundCommand($),

    command_recovery: ($) => $._missing_command_recovery_boundary,

    _recovering_pipeline: ($) =>
      field("sequence", alias($._recovering_pipe_sequence, $.pipe_sequence)),

    _recovering_pipe_sequence: ($) =>
      field("command", alias($._recovering_command, $.command)),

    _recovering_command: ($) => field("recovery", $.command_recovery),

    separator_op: (_) => choice("&", ";"),

    _separator_boundary_layout: ($) => $._horizontal_layout,

    separator: ($) =>
      choice(
        seq(
          field("operator", $.separator_op),
          optional(
            seq(
              optional($._horizontal_layout),
              field("linebreak", $.linebreak),
            ),
          ),
        ),
        field("newlines", $.newline_list),
      ),

    sequential_sep: ($) =>
      choice(
        seq(
          ";",
          optional(
            seq(
              optional($._horizontal_layout),
              field("linebreak", $.linebreak),
            ),
          ),
        ),
        field("newlines", $.newline_list),
      ),

    term: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            optional($._separator_boundary_layout),
            field("separator", $.separator),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
      ),

    compound_list: ($) =>
      choice(
        prec.dynamic(
          50,
          seq(
            field("leading", $.linebreak),
            optional($._horizontal_layout),
            terminatedCompoundList($),
          ),
        ),
        seq(
          field("leading", $.linebreak),
          optional($._horizontal_layout),
          field("body", $.term),
        ),
        prec.dynamic(
          50,
          seq(optional($._horizontal_layout), terminatedCompoundList($)),
        ),
        seq(optional($._horizontal_layout), field("body", $.term)),
        prec.dynamic(
          10,
          seq(
            field("leading", $.linebreak),
            optional($._horizontal_layout),
            field("body", alias($._closed_term, $.term)),
          ),
        ),
        prec.dynamic(
          10,
          seq(
            optional($._horizontal_layout),
            field("body", alias($._closed_term, $.term)),
          ),
        ),
      ),

    _closed_term: ($) =>
      seq(
        optional($._term_prefix),
        field("and_or", alias($._closed_and_or, $.and_or)),
      ),

    if_keyword: ($) => reservedWord($, $._if_keyword),

    then_keyword: ($) => reservedWord($, $._then_keyword),

    elif_keyword: ($) => reservedWord($, $._elif_keyword),

    else_keyword: ($) => reservedWord($, $._else_keyword),

    fi_keyword: ($) => reservedWord($, $._fi_keyword),

    for_keyword: ($) => reservedWord($, $._for_keyword),

    in_keyword: ($) => reservedWord($, $._in_keyword),

    do_keyword: ($) => reservedWord($, $._do_keyword),

    done_keyword: ($) => reservedWord($, $._done_keyword),

    case_keyword: ($) => reservedWord($, $._case_keyword),

    esac_keyword: ($) => reservedWord($, $._esac_keyword),

    while_keyword: ($) => reservedWord($, $._while_keyword),

    name: ($) => nameSource($),

    compound_command: ($) =>
      choice(
        $.brace_group,
        $.subshell,
        $.for_clause,
        $.case_clause,
        $.if_clause,
        $.while_clause,
        $.until_clause,
      ),

    compound_command_recovery: ($) =>
      prec.dynamic(-50, $._compound_command_recovery_boundary),

    for_clause: ($) =>
      seq(
        $.for_keyword,
        choice(
          headerRecoveryField($),
          seq(
            $._word_separator,
            choice(
              seq(field("name", $.name), recoveringForTail($)),
              headerRecoveryField($),
            ),
          ),
        ),
      ),

    in: ($) => $.in_keyword,

    wordlist: ($) =>
      seq(
        field("word", $.word),
        repeat(seq($._word_separator, field("word", $.word))),
      ),

    do_group: ($) =>
      seq(
        $.do_keyword,
        choice(
          prec.dynamic(
            -50,
            prec.right(
              20,
              seq(
                emptyCompoundListField($, "body"),
                choice($.done_keyword, recoveryField($)),
              ),
            ),
          ),
          seq(
            compoundListField($, "body"),
            optional($._horizontal_layout),
            choice(
              prec(20, $.done_keyword),
              prec.dynamic(-50, recoveryField($)),
            ),
          ),
        ),
      ),

    if_clause: ($) => prec.right(ifClause($)),

    else_part: ($) =>
      prec.right(
        choice(
          seq(
            $.elif_keyword,
            choice(
              recoveryField($),
              seq(
                recoverableCompoundListField($, "condition"),
                optional($._horizontal_layout),
                choice(
                  recoveryField($),
                  seq(
                    $.then_keyword,
                    recoverableCompoundListField($, "consequence"),
                    optional($._horizontal_layout),
                    optional(field("alternative", $.else_part)),
                  ),
                ),
              ),
            ),
          ),
          seq(
            $.else_keyword,
            choice(recoveryField($), recoverableCompoundListField($, "body")),
          ),
        ),
      ),

    while_clause: ($) => loopClause($, $.while_keyword),

    case_clause: ($) =>
      seq(
        $.case_keyword,
        choice(
          headerRecoveryField($),
          seq(
            $._word_separator,
            choice(
              headerRecoveryField($),
              seq(
                field("word", $.word),
                choice(
                  seq(optional($._horizontal_layout), recoveryField($)),
                  seq(
                    reservedWordLinebreak($),
                    choice(
                      recoveryField($),
                      seq(
                        field("in", $.in),
                        linebreakLayout($),
                        caseClauseItems($),
                      ),
                    ),
                  ),
                ),
              ),
            ),
          ),
        ),
      ),

    case_list: ($) => repeat1(field("item", $.case_item)),

    case_item: ($) =>
      seq(
        field("patterns", $.pattern_list),
        patternClosingLayout($),
        ")",
        choice(
          linebreakLayout($),
          prec.dynamic(10, field("body", $.compound_list)),
        ),
        continuationBoundaryLayout($, $._case_item_end),
        field("terminator", choice($.dsemi, $.semi_and)),
        prec.right(1, optional(caseItemFollowingLayout($))),
      ),

    pattern_list: ($) =>
      prec.dynamic(
        2,
        prec.right(
          1,
          seq(
            optional(seq("(", optional($._horizontal_layout))),
            field("word", $.word),
            repeat(
              seq(
                patternBoundaryLayout($),
                "|",
                optional($._horizontal_layout),
                field("word", $.word),
              ),
            ),
          ),
        ),
      ),

    dsemi: (_) => prec(10, ";;"),

    simple_command: ($) =>
      choice(
        seq(
          field("prefix", $.cmd_prefix),
          optional(
            seq(
              $._word_separator,
              field("word", $.cmd_word),
              optional(field("suffix", $.cmd_suffix)),
            ),
          ),
        ),
        seq(field("name", $.cmd_name), optional(field("suffix", $.cmd_suffix))),
      ),

    cmd_name: ($) => $.word,

    cmd_suffix: ($) =>
      repeat1(
        choice(
          seq($._word_separator, field("word", $.word)),
          field(
            "redirect",
            alias($._io_redirect_without_descriptor, $.io_redirect),
          ),
          seq(
            repeat1($.line_continuation),
            field(
              "redirect",
              alias($._io_redirect_without_descriptor, $.io_redirect),
            ),
          ),
          seq($._word_separator, field("redirect", $.io_redirect)),
        ),
      ),

    io_redirect: ($) =>
      choice(
        prec.dynamic(
          2,
          seq(
            choice(
              field("number", $.io_number),
              field("location", $.io_location),
            ),
            repeat($.line_continuation),
            field("body", choice($.io_file, $.io_here)),
          ),
        ),
        field("body", choice($.io_file, $.io_here)),
      ),

    _io_redirect_without_descriptor: ($) =>
      field("body", choice($.io_file, $.io_here)),

    io_file: ($) =>
      seq(
        field(
          "operator",
          choice(
            "<",
            ">",
            $.lessand,
            $.greatand,
            $.dgreat,
            $.lessgreat,
            $.clobber,
          ),
        ),
        optional($._horizontal_layout),
        field("filename", $.filename),
      ),

    filename: ($) =>
      choice(
        field("word", $.word),
        field("recovery", $.redirection_target_recovery),
      ),

    variable_name: ($) => nameSource($),

    word: ($) => $._source_word,

    _source_word: ($) =>
      choice(
        prec.right(seq($.tilde_expansion, optional($._source_word_tail))),
        prec.right(seq($._word_part, optional($._source_word_tail))),
      ),

    literal: ($) =>
      prec.right(choice("$", logicalPlainSource($, wordPlainChunk($)))),

    single_quoted: ($) =>
      seq(
        "'",
        optional($.single_quote_content),
        choice(
          "'",
          alias($._here_document_boundary, $.here_document_end_recovery),
        ),
      ),

    single_quote_content: ($) =>
      repeat1(choice(token.immediate(/[^'\n]+/), $._newline)),

    double_quoted: ($) =>
      seq(
        '"',
        repeat(doubleQuotedPart($)),
        choice(
          '"',
          alias($._here_document_boundary, $.here_document_end_recovery),
        ),
      ),

    parameter_expansion: ($) =>
      parameterExpansion($, $._braced_parameter_expansion),

    _braced_parameter_expansion: ($) =>
      bracedParameterExpansion(
        $,
        $._parameter_expansion_tail,
        $._parameter_tail_recovery_boundary,
      ),

    parameter_expansion_recovery: ($) =>
      $._parameter_expansion_recovery_boundary,

    parameter_length_operator: (_) => "#",

    newline_list: ($) =>
      repeat1(
        choice(
          $.here_document_sequence,
          $._newline,
          $._blank_line,
          $._continued_blank_line,
          $._comment_line,
        ),
      ),

    linebreak: ($) => $.newline_list,

    _horizontal_layout: ($) =>
      prec.right(1, repeat1(choice($._blank, prec(2, $.line_continuation)))),

    _word_separator: ($) =>
      prec.right(
        2,
        choice(
          seq($._blank, repeat(choice($._blank, $.line_continuation))),
          continuedWordSeparator($),
        ),
      ),

    _free_trailing_layout: ($) =>
      prec.right(1, choice($._horizontal_layout, $._free_comment)),

    _comment_line: ($) => seq($._free_comment, $._newline),

    _continued_blank_line: ($) =>
      prec.dynamic(2, seq(continuedBlankLineLayout($), $._newline)),

    _blank_line: ($) => seq($._blank, $._newline),
